--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-  width: 100vw;
+  width: 100%;
 
 }
 
